# history-hub

./: .gitignore  BUILD.md  INSTALL.md  electron-builder.yml  nextron.config.js  package.json  test-build-local.sh
.github/: test-build.sh
.github/workflows/: build.yml
main/: background.ts  preload.ts
native/: Cargo.toml  claude-parser.darwin-arm64.node  index.d.ts  index.js  package.json
native/src/: lib.rs
renderer/lib/: claude-reader.ts
renderer/pages/: home.tsx
scripts/: build-native.js
