[package]
name = "claude-parser"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# napi-rs - Bridge giữa Rust và Node.js
napi = "2"
napi-derive = "2"

# JSON parsing - chúng ta sẽ dùng serde_json trước (dễ hơn)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
napi-build = "2"
